<?xml version="1.0"?>
<package>
  <name>percy</name>
  <version>0.0.1</version>
  <description>
    Python wrappers for perception code.
  </description>
  <url type="repository">https://github.com/personalrobotics/percy</url>
  <maintainer email="awalsman@andrew.cmu.edu">Aaron Walsman</maintainer>
  <author email="awalsman@andrew.cmu.edu">Aaron Walsman</author>
  <license>UNRELEASED</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
